# Betti-Matching-3D

./: .clang-format  .gdbinit  .git-blame-ignore-revs  .gitconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  input0.npy  input0_2D.npy  input1_2D.npy  input_3.txt  introduction.ipynb  random0.npy  random1.npy  random1_2D.npy  test.gdb
src/: BettiMatching.cpp  BettiMatching.h  Makefile  _BettiMatching.cpp  boundary_enumerator.cpp  boundary_enumerator.h  config.h  cube.cpp  cube.h  cubical_grid_complex.cpp  cubical_grid_complex.h  data_structures.cpp  data_structures.h  dimension_0.cpp  dimension_1.cpp  dimension_1.h  image_0.txt  main.cpp  match.cpp  match.h  matched.csv  pretty_printers_gdb.py  top_dimension.cpp  union_find.h  unmatched_0.csv  unmatched_1.csv  utils.cpp  utils.h  write_pair.cpp  write_pair.h
src-3D/: config.h  data_structures.cpp  data_structures.h  dimension_0.h  match.h  utils.h
src-nD/: enumerators.h
src/code/: BettiMatching  BettiMatching.cpp  input_0_2D.npy  input_1.npy  input_1_2D.npy  match.h  top_dimension.cpp  union_find.cpp  unmatched_1.csv
src/src-3D/: dimension_0.cpp  top_dimension.cpp
src/src-3D/ignore/: dimension_1.h  enumerators.cpp  enumerators.h
src/src-nD/: top_dimension.h  utils.h
src/src_1D/: BettiMatching.cpp  BettiMatching.h  data_structures.cpp  data_structures.h  dimension_0.cpp  dimension_0.h
src/src_2D/: BettiMatching.cpp  BettiMatching.h  data_structures.cpp  data_structures.h  dimension_0.cpp  dimension_0.h  dimension_1.cpp  dimension_1.h  headers.h
src/src_3D/: BettiMatching.cpp  BettiMatching.h  BettiMatching3D.cpp  BettiMatching3D.h  config.h  data_structures.cpp  data_structures.h  dimension_0.cpp  dimension_0.h  dimension_1.cpp  dimension_1.h  dimension_2.cpp  dimension_2.h  enumerators.cpp  enumerators.h  top_dimension.h  utils.cpp  utils.h
src/src_3D/ignore/: dimension_1.cpp
src/src_3D_old/: BettiMatching.cpp  cubical_grid_complex.cpp  cubical_grid_complex.h  dimension_1.cpp  dimension_1.h  top_dimension.h
src/src_nD/: BettiMatching.cpp  BettiMatching.h  _betti_matching_nD.cpp  betti_matching_nD.cpp  betti_matching_nD.h  config.h  data_structures.cpp  data_structures.h  dimension_0.cpp  dimension_0.h  enumerators.cpp  enumerators.h  inter_dimensions.cpp  inter_dimensions.h  template_functions.h  top_dimension.cpp  top_dimension.h  utils.cpp  utils.h
src/src_old/: BettiMatching  BettiMatching.cpp
src_2/: BettiMatching  BettiMatching.cpp  Makefile  config.h  data_structures.cpp  data_structures.h  dimension_0.cpp  dimension_0.h  enumerators.cpp  enumerators.h  inter_dimensions.cpp  inter_dimensions.h  template_functions.h  top_dimension.cpp  top_dimension.h  utils.cpp  utils.h
src_2/code/: BettiMatching  BettiMatching.cpp  Makefile  compute_pairs.cpp  compute_pairs.h  config.h  data_structures.cpp  data_structures.h  dimension_0.h  enumerators.cpp  enumerators.h  input_0.npy  input_1.txt  inter_dimensions.cpp  inter_dimensions.h  matched.csv  top_dimension.cpp  top_dimension.h  unmatched_0.csv
test/: input0.npy  input0_1D.npy  input0_2D.npy  input0_4D.npy  input1.npy  input1_1D.npy  input1_2D.npy  input1_4D.npy  input2.npy  input3.npy  input_0.npy  input_1.npy  inputs.ipynb  random0.npy  random0_2D.npy  random1.npy  random1_2D.npy  test.ipynb
utils/: functions.py  plots.py
